--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 .top-layer {
   height: 120px;
-  background: #9c5ef3; /* светло-фиолетовый */
+  background: #6085e1; /* светло-фиолетовый */
 }
 
 .candle {
