--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ body {
 .bottom-layer {
   width: 180px;
   height: 100px;
-  background: hsl(258, 84%, 51%); /* светло-голубой */
+  background: hsl(258, 97%, 70%); /* светло-голубой */
   margin-top: -30px; /* немного перекрывает нижний слой */
   border-radius: 20px 20px 10px 10px;
 }
 
 .top-layer {
   height: 120px;
-  background: #6085e1; /* светло-фиолетовый */
+  background: #652ccf; /* светло-фиолетовый */
 }
 
 .candle {
@@ -51,7 +51,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   width: 14px;
-  height: 20px;
+  height: 25px;
   background: radial-gradient(ellipse at center, yellow 0%, orange 60%, red 100%);
   border-radius: 50%;
   animation: flicker 0.2s infinite;
@@ -61,7 +61,7 @@ body {
 
 .smoke {
   position: absolute;
-  top: -20px;
+  top: -15px;
   left: 50%;
   transform: translateX(-50%);
   width: 10px;
@@ -96,7 +96,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 10px;
-  height: 10px;
+  height: 12px;
   background: rgba(200, 200, 200, 0.5);
   border-radius: 50%;
   opacity: 0;
